--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=d580f0807254b0485eff9121dc0ff3b2
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/testperf?serverVersion=5.7"
+DATABASE_URL="mysql://root:@127.0.0.1:3308/testperf?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
