--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ pipeline-k6 ]
   pull_request:
-    branches: [ main ]
+    branches: [ pipeline-k6 ]
 
   # Allows you to run th
 
